# fun_sfml

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/mult_table/: CMakeLists.txt  Makefile  cmake_install.cmake  mult_table.cpp
